--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/bxslider.css">
 </head>
 <body>
     <div class="topheader">
@@ -31,11 +32,28 @@
     <main class="main-content">
         <section class="banner">
             <div class="container">
-
+                <div class="col-lg-12">
+                <ul class="bxslider">
+                    <li>
+                        <h2>Профессионализм-наше всё!</h2>
+                        <p>Менее 5% переделок</p>
+                    </li>
+                    <li>
+                        <h2>Скорость важна в любом бизнесе!</h2>
+                        <p>Создаем сайты от 3х дней</p>
+                    </li>
+                    <li>
+                        <h2>Надёжность наша фишка</h2>
+                        <p>Ни одного упавшего сайта</p>
+                    </li>
+                </ul>
+            </div>
             </div>
         </section>
     </main>
     <script src="script/jquery-2.1.1.js"></script>
     <script src="script/bootstrap.min.js"></script>
+    <script src="script/bxslider.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
