--- a/index.html
+++ b/index.html
@@ -47,7 +47,21 @@
                         <p>Ни одного упавшего сайта</p>
                     </li>
                 </ul>
+
+                <div class="scrolldown">
+                    <a href="#about">
+                        <img src="images/mouse.png">
+                        <p>Листай дальше</p>
+                    </a>
+                </div>
             </div>
+            </div>
+        </section>
+        <section class="aboutus">
+            <div class="head_white_content">
+                <h3>О нас</h3>
+                <span></span>
+                <p>Наша студия основана двумя энтузиастами в 2013 году.</p>
             </div>
         </section>
     </main>
