--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/bxslider.css">
+    <link rel="stylesheet" href="css/icon-font.min.css">
 </head>
 <body>
     <div class="topheader">
@@ -62,6 +63,42 @@
                 <h3>О нас</h3>
                 <span></span>
                 <p>Наша студия основана двумя энтузиастами в 2013 году.</p>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-lg-4 col-xl-4">
+                    <div class="advantage">
+                        <span class="lnr lnr-picture"></span>
+                        <h4>Индивидуальный подход</h4>
+                        <p>Индивидуальный подход для клиентов</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-lg-4 col-xl-4">
+                    <div class="advantage">
+                        <span class="lnr lnr-briefcase"></span>
+                        <h4>Открытое портфолио</h4>
+                        <p>Здесь увидите наши работы. Они самые лучшие в мире.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-lg-4 col-xl-4">
+                    <div class="advantage">
+                        <span class="lnr lnr-sync"></span>
+                        <h4>Обновления!</h4>
+                        <p>Мы продолжаем обновлять разработанные сайты</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="somefutures">
+            <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-lg-12 col-xl-12">
+                    <div class="head_black_content">
+                        <h4>Мы в цифрах</h4>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
     </main>
