--- a/index.html
+++ b/index.html
@@ -99,6 +99,29 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row numeral">
+                <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                    <span class="lnr lnr-screen"></span>
+                    <p>Уже работающих сайтов</p>
+                    <h5>132</h5>
+                </div>
+                <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                    <span class="lnr lnr-user"></span>
+                    <p>Довольных клиентов</p>
+                    <h5>83+</h5>
+                </div>
+                <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                    <span class="lnr lnr-hourglass"></span>
+                    <p>Время изготовления</p>
+                    <h5>5 дней</h5>
+                </div>
+                <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                    <span class="lnr lnr-magic-wand"></span>
+                    <p>Скорость загрузки страницы</p>
+                    <h5>2 сек</h5>
+                </div>
+            </div>
             </div>
         </section>
     </main>
