--- a/index.html
+++ b/index.html
@@ -124,6 +124,97 @@
             </div>
             </div>
         </section>
+
+        <section class="ourworks">
+            <div class="head_white_content">
+                <h3>Портфолио</h3>
+                <span></span>
+                <p>За время нашей работы,, мы накопили огромное количество сайтов, с которыми вы можете ознакомиться.</p>
+            </div>
+        </section>
+        <section class="team">
+            <div class="head_white_content">
+                <h3>Команда</h3>
+                <span></span>
+                <p>Наши специалисты, которые будут работать над вашим сайтом.</p>
+            </div>
+        </section>
+
+        <section class="price">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-12 col-xl-12">
+                        <div class="head_black_content">
+                            <h4>Цены</h4>
+                            <span></span>
+                            <p class="addit_info">Цены указаны за СТАНДАРТНЫЙ сайт и являются приблизительными.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row numeral">
+                    <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                    <div class="price-content-head">
+                        <h5>от 7000 руб.</h5>
+                        <h4>ЛЕНДИНГ</h4>
+                        <p>Одностраничный сайт для продукта или услуги</p>
+                    </div>
+                    <div class="price-content-body">
+                        <p><span>8</span> Блоков</p>
+                        <p><span>1</span> Товар или услуга</p>
+                        <p><span>3</span> Правки</p>
+                        <p><span>200+</span> Клиентов в месяц</p>
+                        <a href="#" class="order">ЗАКАЗАТЬ</a>
+                    </div>
+                    </div>
+                    <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                        <div class="price-content-head">
+                            <h5>от 13000 руб.</h5>
+                            <h4>ВИЗИТКА</h4>
+                            <p>Презентация компании и ее товара</p>
+                        </div>
+                        <div class="price-content-body">
+                            <p><span>5</span> Страниц</p>
+                            <p><span>5</span> Суб страниц</p>
+                            <p><span>5</span> Правок</p>
+                            <p><span>500+</span> Клиентов в месяц</p>
+                            <a href="#" class="order">ЗАКАЗАТЬ</a>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                        <div class="price-content-head">
+                            <h5>от 20 000 руб.</h5>
+                            <h4>КАТАЛОГ</h4>
+                            <p>Демонстрация товаров</p>
+                        </div>
+                        <div class="price-content-body">
+                            <p><span>15</span> Страниц</p>
+                            <p><span>50</span> Товаров</p>
+                            <p><span>10</span> Правок</p>
+                            <p><span>700+</span> Клиентов в месяц</p>
+                            <a href="#" class="order">ЗАКАЗАТЬ</a>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                        <div class="price-content-head">
+                            <h5>от 35 000 руб.</h5>
+                            <h4>ИНТЕРНЕТ-МАГАЗИН</h4>
+                            <p>Полный цикл покупки в интернете</p>
+                        </div>
+                        <div class="price-content-body">
+                            <p><span>20</span> Страниц</p>
+                            <p><span>100</span> Товаров</p>
+                            <p><span>10+</span> Правок</p>
+                            <p><span>1300+</span> Клиентов в месяц</p>
+                            <a href="#" class="order">ЗАКАЗАТЬ</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </section>
     </main>
     <script src="script/jquery-2.1.1.js"></script>
     <script src="script/bootstrap.min.js"></script>
