--- a/index.html
+++ b/index.html
@@ -138,6 +138,51 @@
                 <span></span>
                 <p>Наши специалисты, которые будут работать над вашим сайтом.</p>
             </div>
+            <div class="row">
+                <ul class="bxslider_team">
+                    <li>
+                        <div class="row teamslider">
+                            <div class="col-md-4 col-lg-4 col-xl-4">
+                                <div class="sinner1">
+                                    <img src="images/simage1.png" alt="">
+                                    <h4>Марк Михалев</h4>
+                                    <p>Директор</p>
+                                    <a href=""><img src="images/icon-vk.png" alt=""></a>
+                                    <a href=""><img src="images/icon-inst.png" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="col-md-8 col-lg-8 col-xl-8">
+                                <div class="sinner2">
+                                    <h4>Мои скиллы</h4>
+                                    <p>Я программист и директор</p>
+                                    <img src="images/stat.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row teamslider">
+                            <div class="col-md-4 col-lg-4 col-xl-4">
+                                <div class="sinner1">
+                                    <img src="images/simage1.png" alt="">
+                                    <h4>Линус Торвальдс</h4>
+                                    <p>Программист</p>
+                                    <a href=""><img src="images/icon-vk.png" alt=""></a>
+                                    <a href=""><img src="images/icon-inst.png" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="col-md-8 col-lg-8 col-xl-8">
+                                <div class="sinner2">
+                                    <h4>Мои скиллы</h4>
+                                    <p>Я программист</p>
+                                    <img src="images/stat.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
         </section>
 
         <section class="price">
@@ -154,9 +199,10 @@
 
                 <div class="row numeral">
                     <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                    <div class="price-content">    
                     <div class="price-content-head">
                         <h5>от 7000 руб.</h5>
-                        <h4>ЛЕНДИНГ</h4>
+                        <h4>ЛЕНДИНГ</h4><br/>
                         <p>Одностраничный сайт для продукта или услуги</p>
                     </div>
                     <div class="price-content-body">
@@ -167,10 +213,12 @@
                         <a href="#" class="order">ЗАКАЗАТЬ</a>
                     </div>
                     </div>
+                    </div>
                     <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                    <div class="price-content">
                         <div class="price-content-head">
                             <h5>от 13000 руб.</h5>
-                            <h4>ВИЗИТКА</h4>
+                            <h4>ВИЗИТКА</h4><br/>
                             <p>Презентация компании и ее товара</p>
                         </div>
                         <div class="price-content-body">
@@ -181,11 +229,14 @@
                             <a href="#" class="order">ЗАКАЗАТЬ</a>
                         </div>
                     </div>
+                    </div>
                     <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                        <div class="price-content">
                         <div class="price-content-head">
                             <h5>от 20 000 руб.</h5>
-                            <h4>КАТАЛОГ</h4>
+                            <h4>КАТАЛОГ</h4><br/>
                             <p>Демонстрация товаров</p>
+                            <br/>
                         </div>
                         <div class="price-content-body">
                             <p><span>15</span> Страниц</p>
@@ -194,8 +245,10 @@
                             <p><span>700+</span> Клиентов в месяц</p>
                             <a href="#" class="order">ЗАКАЗАТЬ</a>
                         </div>
+                        </div>
                     </div>
                     <div class="col-md-3 col-xl-3 col-lg-3 col-6">
+                        <div class="price-content">
                         <div class="price-content-head">
                             <h5>от 35 000 руб.</h5>
                             <h4>ИНТЕРНЕТ-МАГАЗИН</h4>
@@ -209,8 +262,8 @@
                             <a href="#" class="order">ЗАКАЗАТЬ</a>
                         </div>
                     </div>
+                    </div>
                 </div>
-
             </div>
 
 
