--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/bxslider.css">
     <link rel="stylesheet" href="css/icon-font.min.css">
+    <link rel="stylesheet" href="css/flexslider.css">
 </head>
 <body>
     <div class="topheader">
@@ -132,6 +133,44 @@
                 <p>За время нашей работы,, мы накопили огромное количество сайтов, с которыми вы можете ознакомиться.</p>
             </div>
         </section>
+
+        <section class="partners">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-12 col-xl-12">
+                        <div class="head_black_content">
+                            <h4>Партнеры</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-lg-12 col-xl-12">
+                        <div class="innerwidth">
+                            <div class="flexslider">
+                                <ul class="slides">
+                                    <li>
+                                        <img src="images/partner1.png" alt="">
+                                    </li>
+                                    <li>
+                                        <img src="images/partner2.png" alt="">
+                                    </li>
+                                    <li>
+                                        <img src="images/partner3.png" alt="">
+                                    </li>
+                                    <li>
+                                        <img src="images/partner4.png" alt="">
+                                    </li>
+                                    <li>
+                                        <img src="images/partner1.png" alt="">
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="team">
             <div class="head_white_content">
                 <h3>Команда</h3>
@@ -265,13 +304,43 @@
                     </div>
                 </div>
             </div>
+        </section>
 
-
+        <section class="getintouch">
+            <div class="head_white_content">
+                <h3>Контакты</h3>
+                <span></span>
+                <p>Оставьте свои данные в форме ниже и мы с вами свяжемся</p>
+            </div>
+            <div class="row">
+                <div class="col-md-12 col-lg-12 col-xl-12">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-6 col-6 textinput">
+                                <p>Имя<span>*</span></p>
+                                <input type="text" id="name">
+                            </div>
+                            <div class="col-md-6 col-6 textinput">
+                                <p>Электронная почта<span>*</span></p>
+                                <input type="text" id="email">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 col-12 textmsg">
+                                <p>Комментарий</p>
+                                <textarea id="msg" cols="30" rows="10"></textarea>
+                                <input type="button" class="submit" value="Отправить запрос">
+                            </div>
+                            </div>
+                    </form>
+                </div>
+            </div>
         </section>
     </main>
     <script src="script/jquery-2.1.1.js"></script>
     <script src="script/bootstrap.min.js"></script>
     <script src="script/bxslider.js"></script>
     <script src="script/script.js"></script>
+    <script src="script/jquery.flexslider.js"></script>
 </body>
 </html>
