--- a/index.html
+++ b/index.html
@@ -127,10 +127,24 @@
         </section>
 
         <section class="ourworks">
-            <div class="head_white_content">
-                <h3>Портфолио</h3>
-                <span></span>
-                <p>За время нашей работы,, мы накопили огромное количество сайтов, с которыми вы можете ознакомиться.</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-12 col-xl-12">
+                        <div class="head_white_content">
+                        <h3>Портфолио</h3>
+                        <span></span>
+                        <p>За время нашей работы,, мы накопили огромное количество сайтов, с которыми вы можете ознакомиться.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix workportfolio">
+                <ul class="clearfix" id="filters">
+                    <li><span class="filter active" data-filter="lend card magaz shop">Все проекты</span></li>
+                    <li><span class="filter active" data-filter="lend">Лендинги</span></li>
+                    <li><span class="filter active" data-filter="card">Визитки</span></li>
+                    <li><span class="filter active" data-filter="magaz">Каталоги</span></li>
+                    <li><span class="filter active" data-filter="shop">Интернет-магазины</span></li>
+                </ul>
             </div>
         </section>
 
@@ -336,11 +350,45 @@
                 </div>
             </div>
         </section>
+
+        <section class="direction">
+            <div class="map accordion">
+                <h3>Наш офис
+                <span></span>
+                </h3>
+            </div>
+            <div class="map content">
+                <div style="position:relative;overflow:hidden;">
+                    <a href="https://yandex.ru/maps/51/samara/?utm_medium=mapframe&utm_source=maps" 
+                    style="color:#eee;font-size:12px;position:absolute;top:0px;">Самара</a>
+                    <a href="https://yandex.ru/maps/51/samara/house/ulitsa_sanfirovoy_95v_2/YUkYdw5lSk0PQFtpfX5zcXxrbA==/?ll=50.195387%2C53.220088&utm_medium=mapframe&utm_source=maps&z=16.57" 
+                    style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Санфировой, 95В/2 — Яндекс Карты</a>
+                    <iframe src="https://yandex.ru/map-widget/v1/-/CCUFQVapkC" width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-12 col-xl-12">
+                        <div class="head_black_content">
+                            <a href="/" class="logo-ft"><img src="images/logo.png" alt=""></a>
+                            <h4>Студия создания сайтов</h4>
+                            <p>Разработано в <a href="https://sov-teh.ru">1С:Клуб программистов</a></p>
+                            <a href="http://vk.com/1c_samara" class="social">
+                                <img src="images/icon-vk.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
     <script src="script/jquery-2.1.1.js"></script>
     <script src="script/bootstrap.min.js"></script>
     <script src="script/bxslider.js"></script>
     <script src="script/script.js"></script>
     <script src="script/jquery.flexslider.js"></script>
+    <script src="script/jquery.accordion.js"></script>
 </body>
 </html>
