--- a/index.html
+++ b/index.html
@@ -145,6 +145,81 @@
                     <li><span class="filter active" data-filter="magaz">Каталоги</span></li>
                     <li><span class="filter active" data-filter="shop">Интернет-магазины</span></li>
                 </ul>
+            
+            <div id="portfoliolist">
+                <div class="portfolio lend" data-cat="lend">
+                    <div class="portfolio-wrapper">
+                        <img src="images/portfolios/lend.jpg" alt="">
+                        <div class="imgDisc2">
+                            <h1>Лендинг</h1>
+                            <p>Описание Лендинга</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio lend" data-cat="lend">
+                    <div class="portfolio-wrapper">
+                        <img src="images/portfolios/lend.jpg" alt="">
+                        <div class="imgDisc2">
+                            <h1>Лендинг2</h1>
+                            <p>Описание Лендинга2</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio card" data-cat="card">
+                    <div class="portfolio-wrapper">
+                        <img src="images/portfolios/card.jpg" alt="">
+                        <div class="imgDisc2">
+                            <h1>ВИЗИТКА</h1>
+                            <p>Описание Визитки</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio card" data-cat="card">
+                    <div class="portfolio-wrapper">
+                        <img src="images/portfolios/card.jpg" alt="">
+                        <div class="imgDisc2">
+                            <h1>ВИЗИТКА2</h1>
+                            <p>Описание Визитки2</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio magaz" data-cat="magaz">
+                    <div class="portfolio-wrapper">
+                        <img src="images/portfolios/magaz.jpg" alt="">
+                        <div class="imgDisc2">
+                            <h1>КАТАЛОГ</h1>
+                            <p>Описание Каталога</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio magaz" data-cat="magaz">
+                    <div class="portfolio-wrapper">
+                        <img src="images/portfolios/magaz.jpg" alt="">
+                        <div class="imgDisc2">
+                            <h1>КАТАЛОГ2</h1>
+                            <p>Описание Каталога2</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio shop" data-cat="shop">
+                    <div class="portfolio-wrapper">
+                        <img src="images/portfolios/shop.jpg" alt="">
+                        <div class="imgDisc2">
+                            <h1>ИНТЕРНЕТ-МАГАЗИН</h1>
+                            <p>Описание Интернет-магазина</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio shop" data-cat="shop">
+                    <div class="portfolio-wrapper">
+                        <img src="images/portfolios/shop.jpg" alt="">
+                        <div class="imgDisc2">
+                            <h1>ИНТЕРНЕТ-МАГАЗИН2</h1>
+                            <p>Описание Интернет-магазина2</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
 
@@ -390,5 +465,6 @@
     <script src="script/script.js"></script>
     <script src="script/jquery.flexslider.js"></script>
     <script src="script/jquery.accordion.js"></script>
+    <script src="script/jquery.mixitup.min.js"></script>
 </body>
 </html>
